--- a/app/src/main/res/layout/companyrow.xml
+++ b/app/src/main/res/layout/companyrow.xml
@@ -24,10 +24,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:id="@+id/packageTextView"
             android:textSize="16dp"
             android:text="Package: X LPA"
             android:layout_alignParentLeft="true"
             android:textColor="#324989"
+
             ></TextView>
         <ImageView
             android:layout_width="200dp"
