--- a/app/src/main/res/layout/companyrow.xml
+++ b/app/src/main/res/layout/companyrow.xml
@@ -7,6 +7,7 @@
      android:background="@drawable/company_gradient"
     android:layout_margin="8dp"
     android:elevation="16dp"
+    android:id="@+id/companyCard"
     >
     <TextView
         android:id="@+id/companyName"
