--- a/app/src/main/res/drawable/c_background.xml
+++ b/app/src/main/res/drawable/c_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <gradient android:startColor="#667eea"
-        android:endColor="#89f7fe"
+    <gradient android:startColor="#ff006e"
+        android:endColor="#ced4da"
         android:angle="90"
         ></gradient>
     <corners
