--- a/app/src/main/res/layout/activity_company_info.xml
+++ b/app/src/main/res/layout/activity_company_info.xml
@@ -24,10 +24,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
+        android:padding="0dp"
         android:text="Company"
-        android:textSize="30sp"
         android:textFontWeight="600"
-        android:padding="0dp"/>
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/tvProfile"
@@ -142,20 +142,21 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Description"
-        android:textSize="22sp"
+        android:textSize="20sp"
         android:padding="8dp"
-        android:textFontWeight="400"
-        android:gravity="center"
+        android:textFontWeight="600"
+        android:gravity="left"
         ></TextView>
+
     <TextView
         android:id="@+id/tvInfo"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Description Content"
-        android:textSize="16sp"
+        android:gravity="left"
         android:padding="8dp"
-        android:gravity="center"
-        ></TextView>
+        android:scrollbars="vertical"
+        android:text="Description Content"
+        android:textSize="14sp"></TextView>
 
 
 </LinearLayout>
