--- a/app/src/main/res/layout/activity_company_info.xml
+++ b/app/src/main/res/layout/activity_company_info.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".CompanyInfo"
-    android:background="@drawable/c_background"
+    android:background="@drawable/company_gradient"
     >
     <ImageView
         android:id="@+id/ivCompanyLogo"
